# advent_of_code

./: .gitignore  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day21.py  day22.py  day23.py  day25.py  day4.py  day5.py  day8.py  day9.py  devcontainer.Dockerfile  direction.py  main.py  pyproject.toml  test_day1.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day17.py  test_day18.py  test_day19.py  test_day2.py  test_day20.py  test_day21.py  test_day22.py  test_day23.py  test_day24.py  test_day25.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  (+1 more)
.devcontainer/: devcontainer.json
2023/: day1.py  day10.py  day11.py  day12.py  day19.py  day2.py  day20.py  day21.py  day22.py  day24.py  day3.py  day6.py  day7.py  day9.py  test_day10.py  test_day15.py  test_day16.py  test_day18.py  test_day19.py  test_day2.py  test_day21.py  test_day25.py  test_day3.py  test_day4.py  test_day7.py  test_day8.py
advent/: runner.py
advent/utils/: binary_search.py  direction.py  grid.py  modulo.py  path_finding.py  path_finding_2.py  split_text.py
advent/year_2017/: __init__.py  day_1.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py
advent/year_2018/: __init__.py  day_3.py
advent/year_2019/: __init__.py  computer.py  day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_2.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
advent/year_2020/: __init__.py  day_1.py  (+24 more)
(+281 files in other folders)
