[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = ""
authors = ["benjfield"]

[tool.poetry.dependencies]
python = "^3.12"
advent-of-code-data = "^2"
numba = "^0.60.0"
graphviz = "^0.20.3"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
